[gd_scene load_steps=8 format=3 uid="uid://f28j43rvjlgg"]

[ext_resource type="Script" path="res://options_menu.gd" id="1_q1dfs"]
[ext_resource type="FontFile" uid="uid://bmnypigf4h1l8" path="res://font/dogica/OTF/dogica.otf" id="2_3fr5i"]
[ext_resource type="AudioStream" uid="uid://ch0sj5rv53ajp" path="res://audios/ui-click-43196 (mp3cut.net).mp3" id="3_rc5ee"]

[sub_resource type="LabelSettings" id="LabelSettings_mrfll"]
font = ExtResource("2_3fr5i")
font_size = 14

[sub_resource type="Theme" id="Theme_c2nyn"]
default_font = ExtResource("2_3fr5i")

[sub_resource type="Theme" id="Theme_fvlqa"]
default_font = ExtResource("2_3fr5i")
default_font_size = 12

[sub_resource type="Theme" id="Theme_kohcu"]
default_font = ExtResource("2_3fr5i")
default_font_size = 12

[node name="OptionsMenu" type="Node2D"]
script = ExtResource("1_q1dfs")

[node name="Background" type="ColorRect" parent="."]
offset_left = 486.0
offset_top = 163.0
offset_right = 786.0
offset_bottom = 563.0
color = Color(0, 0, 0, 0.811765)

[node name="SuccessLabel" type="Label" parent="Background"]
layout_mode = 0
offset_left = 36.0
offset_top = 64.0
offset_right = 274.0
offset_bottom = 90.0
text = "Options
"
label_settings = SubResource("LabelSettings_mrfll")

[node name="ButtonContainer" type="HBoxContainer" parent="Background"]
layout_mode = 0
offset_left = 22.0
offset_top = 347.0
offset_right = 278.0
offset_bottom = 387.0
theme = SubResource("Theme_c2nyn")
theme_override_constants/separation = 80

[node name="Ok" type="Button" parent="Background/ButtonContainer"]
layout_mode = 2
text = "Ok
"

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 0
offset_left = 42.0
offset_top = 104.0
offset_right = 242.0
offset_bottom = 150.0

[node name="MusicLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_fvlqa")
text = "Music
"

[node name="MusicSlider" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
value = 71.0

[node name="SoundEffectLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_kohcu")
text = "Game Effects
"

[node name="SoundEffectSlider" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
value = 71.0

[node name="MenuSoundLabel" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_kohcu")
text = "Menu Effects
"

[node name="MenuSoundSlider" type="HSlider" parent="Background/VBoxContainer"]
layout_mode = 2
value = 71.0

[node name="BtnPressedAudio" type="AudioStreamPlayer2D" parent="." groups=["MenuSound"]]
stream = ExtResource("3_rc5ee")

[connection signal="pressed" from="Background/ButtonContainer/Ok" to="." method="_on_ok_pressed"]
[connection signal="value_changed" from="Background/VBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="Background/VBoxContainer/SoundEffectSlider" to="." method="_on_sound_effect_slider_value_changed"]
[connection signal="value_changed" from="Background/VBoxContainer/MenuSoundSlider" to="." method="_on_menu_sound_slider_value_changed"]
